--- a/index.html
+++ b/index.html
@@ -730,8 +730,8 @@
                                 <th>服务维度</th>
                                 <th>服务板块</th>
                                 <th>事项说明</th>
-                                <th>季度服务</th>
-                                <th>半年服务</th>
+                                <th>季度服务16800元</th>
+                                <th>半年服务32800元</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -760,8 +760,8 @@
                                 <td contenteditable="true">效果保障</td>
                                 <td contenteditable="true">综合维度</td>
                                 <td contenteditable="true">粉丝与曝光</td>
-                                <td contenteditable="true">1000粉丝1万曝光</td>
-                                <td contenteditable="true">3000粉丝4万曝光</td>
+                                <td contenteditable="true">3000粉丝20万曝光</td>
+                                <td contenteditable="true">8000粉丝80万曝光</td>
                             </tr>
                             <tr>
                                 <td contenteditable="true">服务提供</td>
@@ -778,10 +778,10 @@
         
         <div class="action-bar">
             <button class="btn btn-save" id="saveEdits">
-                <i class="fas fa-save"></i> 保存当前编辑
+                <i class="fas fa-save"></i> 联系运营
             </button>
             <button class="btn" id="resetEdits">
-                <i class="fas fa-undo"></i> 重置为初始方案
+                <i class="fas fa-undo"></i> 初步方案
             </button>
             <button class="btn" id="downloadPDF">
                 <i class="fas fa-file-pdf"></i> 导出为PDF
