--- a/index.html
+++ b/index.html
@@ -470,8 +470,8 @@
                                 <td contenteditable="true">品牌定位</td>
                                 <td contenteditable="true">宠物生活方式专家，聚焦"人宠情感互动"场景</td>
                                 <td contenteditable="true">建立萌宠演员库（5只网红犬猫）</td>
-                                <td contenteditable="true">品牌认知度提升40%</td>
-                                <td contenteditable="true">与现有代理分工：我方主攻大陆内容</td>
+                                <td contenteditable="true">品牌认知度提升30%</td>
+                                <td contenteditable="true">与现有代理分工</td>
                             </tr>
                             <tr>
                                 <td contenteditable="true">内容输出</td>
@@ -720,7 +720,7 @@
             <div class="section">
                 <h2 class="section-title">
                     <i class="fas fa-lock"></i>
-                    运营服务体系
+                    运营服务体系（基础包）
                 </h2>
                 
                 <div class="table-container">
